# HigherSkies-Discord-Bot

./: main.py  pyproject.toml
cogs/: fun.py
