[tool.poetry]
name = "nextcord-bot-template"
version = "0.1.0"
description = "Includes the commands extension."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
nextcord = "^2.0.0-alpha.3"
replit = "^3.2.4"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
